--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@supabase/supabase-js": "^2.7.0",
+    "axios": "^1.3.1",
+    "classnames": "^2.3.2",
+    "framer-motion": "^9.0.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
