--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
     "@supabase/supabase-js": "^2.7.0",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.3.1",
     "classnames": "^2.3.2",
     "framer-motion": "^9.0.1",
@@ -18,7 +19,8 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
