--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
     "@supabase/supabase-js": "^2.7.0",
+    "@types/lodash": "^4.14.191",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.1",
     "classnames": "^2.3.2",
