--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@supabase/supabase-js": "^2.7.0",
     "@types/lodash": "^4.14.191",
     "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.3.1",
     "classnames": "^2.3.2",
     "framer-motion": "^9.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
