--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
-    "@supabase/supabase-js": "^2.7.0",
     "@types/lodash": "^4.14.191",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.13",
@@ -22,6 +21,7 @@
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4"
