--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.1",
     "classnames": "^2.3.2",
     "framer-motion": "^9.0.1",
+    "idb-keyval": "^6.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "postcss": "^8.4.21",
